# rusty-automation-tool

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/handlers/: executions.rs  mod.rs  webhooks.rs  workflows.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs  models.rs  pool.rs
crates/db/src/repository/: executions.rs  jobs.rs  mod.rs  workflows.rs
crates/engine/: Cargo.toml
crates/engine/src/: dag.rs  error.rs  executor.rs  executor_tests.rs  lib.rs  models.rs
crates/nodes/: Cargo.toml
crates/nodes/src/: error.rs  lib.rs  mock.rs  traits.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
migrations/: 20240101000000_initial_schema.sql
