[workspace]
members = [
    "crates/api",
    "crates/engine",
    "crates/nodes",
    "crates/queue",
    "crates/db",
    "crates/cli",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rusty Automation Contributors"]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# API Framework (phase 1: placeholder)
axum = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "json",
    "chrono",
    "migrate",
] }

# Core Utils
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Traits
async-trait = "0.1"

# Internal Crates
api    = { path = "crates/api" }
engine = { path = "crates/engine" }
nodes  = { path = "crates/nodes" }
queue  = { path = "crates/queue" }
db     = { path = "crates/db" }
