[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
engine.workspace = true
db.workspace = true
uuid.workspace = true
tower-http = { version = "0.5", features = ["cors", "trace"] }
