[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "rusty-automation-tool"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
api.workspace = true
engine.workspace = true
db.workspace = true
clap = { version = "4.5", features = ["derive"] }
